# anton

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  test.yml
benches/: movegen.rs  perft.rs  search.rs
magic-gen/: Cargo.toml
magic-gen/src/: main.rs
src/: benchmark.rs  engine.rs  evaluation.rs  lib.rs  main.rs  search.rs
src/board/: bitboard.rs  castling.rs  defs.rs  fen.rs  mod.rs  piece.rs  pieces.rs  square.rs  state.rs  zobrist.rs
src/evaluation/: mod.rs  psqt.rs
src/movegen/: attack.rs  directions.rs  magic.rs  mod.rs  move.rs  movelist.rs  moves.rs  perft.rs
src/search/: alphabeta.rs  mod.rs  time.rs  transposition.rs
src/uci/: command.rs  mod.rs  protocol.rs
tests/: perft.rs  search_stats.rs
