[package]
name = "anton"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
strip = "symbols"
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
debug-assertions = false
incremental = false
overflow-checks = false

[dependencies]
