[package]
name = "anton"
version = "0.4.1"
edition = "2024"
authors = ["Armin (armout) Suraj"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
strip = "symbols"
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
debug-assertions = false
incremental = false
overflow-checks = false

[dependencies]
arrayvec = "0.7.6"
rand = "0.10.1"
rand_chacha = "0.10.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "movegen"
harness = false

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "search"
harness = false
